--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -36,12 +36,11 @@
         </div>
 
         <div class="social-container">
-            <div> 간편 회원가입 :
-                <a class="social" th:href="@{/oauth2/authorization/naver}">네이버</a>
-                <a class="social" th:href="@{/oauth2/authorization/kakao}">카카오</a>
-                <a class="social" th:href="@{/oauth2/authorization/google}">구글</a>
-                <a class="social" th:href="@{/oauth2/authorization/facebook}">페이스북</a>
-            </div>
+            <span>간편 회원가입 :</span>
+            <a class="social" th:href="@{/oauth2/authorization/naver}"><img class="wh40" th:src="@{/img/n.png}"></a>
+            <a class="social" th:href="@{/oauth2/authorization/kakao}"><img class="wh40" th:src="@{/img/k.png}"></a>
+            <a class="social" th:href="@{/oauth2/authorization/google}"><img class="wh40" th:src="@{/img/g.png}"></a>
+            <a class="social" th:href="@{/oauth2/authorization/facebook}"><img class="wh40" th:src="@{/img/f.png}"></a>
         </div>
 
     </div>
