--- a/src/main/resources/templates/user/notice.html
+++ b/src/main/resources/templates/user/notice.html
@@ -5,6 +5,7 @@
       layout:decorator="basicLayout">
 <th:block layout:fragment="css">
     <link rel="stylesheet" th:href="@{/css/user/subscriptions.css}">
+    <link rel="stylesheet" th:href="@{/css/user/notice.css}">
 </th:block>
 <th:block layout:fragment="js">
     <script defer th:src="@{/js/common.js}"></script>
