--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -116,6 +116,7 @@ input[type="submit"]:disabled{
 .profile { object-fit: cover; border-radius: 50%; border: 1px solid #8e8e8e;}
 
 .wh30 { width: 30px; height: 30px; }
+.wh40 { width: 40px; height: 40px; }
 .wh50 { width: 50px; height: 50px; }
 .wh150 { width: 150px; height: 150px; }
 .wh200 { width: 200px; height: 200px; }
