--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -31,10 +31,11 @@
         </div>
 
         <div class="social-container">
-            <a class="social" th:href="@{/oauth2/authorization/naver}">네이버</a>
-            <a class="social" th:href="@{/oauth2/authorization/kakao}">카카오</a>
-            <a class="social" th:href="@{/oauth2/authorization/google}">구글</a>
-            <a class="social" th:href="@{/oauth2/authorization/facebook}">페이스북</a>
+            <span>간편 로그인 :</span>
+            <a class="social" th:href="@{/oauth2/authorization/naver}"><img class="wh40" th:src="@{/img/n.png}"></a>
+            <a class="social" th:href="@{/oauth2/authorization/kakao}"><img class="wh40" th:src="@{/img/k.png}"></a>
+            <a class="social" th:href="@{/oauth2/authorization/google}"><img class="wh40" th:src="@{/img/g.png}"></a>
+            <a class="social" th:href="@{/oauth2/authorization/facebook}"><img class="wh40" th:src="@{/img/f.png}"></a>
         </div>
     </div>
 </th:block>
